--- a/tests/table5/config.yml
+++ b/tests/table5/config.yml
@@ -11,19 +11,19 @@ target:
   type: "database"
   transformation : ["n","na"]
   table: "[dbo].[PeopleInfo]"
-  cred_lookup: "sqlserver"
+  cred_lookup: "sqlserver_c1"
   exclude_cols: ["created_date","updated_date","hash_key","batch_id"]
 
 validations:
   count_check:
-    key_columns: ["identifier"]
+    key_columns: ["Identifier"]
   duplicate_check:
-    key_columns: ["identifier"]
+    key_columns: ["Identifier"]
   null_check:
-    null_columns: ["identifier"]
+    null_columns: ["Identifier"]
   uniqueness_check:
-    unique_columns: ["identifier"]
+    unique_columns: ["Identifier"]
   data_compare_check:
-    key_column: ["identifier"]
+    key_column: ["Identifier"]
     validate_columns: ["name"]
     num_records: 100
