--- a/tests/table6/config.yml
+++ b/tests/table6/config.yml
@@ -16,14 +16,14 @@ target:
 
 validations:
   count_check:
-    key_columns: ["identifier"]
+    key_columns: ["Identifier"]
   duplicate_check:
-    key_columns: ["identifier"]
+    key_columns: ["Identifier"]
   null_check:
-    null_columns: ["identifier"]
+    null_columns: ["Identifier"]
   uniqueness_check:
-    unique_columns: ["identifier"]
+    unique_columns: ["Identifier"]
   data_compare_check:
-    key_column: ["identifier"]
+    key_column: ["Identifier"]
     validate_columns: ["name"]
     num_records: 100
