--- a/tests/table2/config.yml
+++ b/tests/table2/config.yml
@@ -1,20 +1,20 @@
 source:
-  path: "C:\\Users\\souls\\PycharmProjects\\MyProj\\taf_dec\\input_files\\Contact_info.csv"
+  path: "input_files/Contact_info.csv"
   type: "csv"
   schema: "Y"
   options:
     header: True
     delimiter: ","
-  exclude_cols: ["created_date","updated_date","hash_key","batch_id"]
+  exclude_cols: ["created_date", "updated_date", "hash_key", "batch_id"]
 
 target:
-  path: "C:\\Users\\souls\\PycharmProjects\\MyProj\\taf_dec\\input_files\\Contact_info.csv"
+  path: "input_files/Contact_info.csv"
   type: "csv"
   schema: "Y"
   options:
     header: True
     delimiter: ","
-  exclude_cols: ["created_date","updated_date","hash_key","batch_id"]
+  exclude_cols: ["created_date", "updated_date", "hash_key", "batch_id"]
 
 validations:
   count_check:
@@ -22,9 +22,9 @@ validations:
   duplicate_check:
     key_columns: ["Identifier"]
   null_check:
-    null_columns: ["Identifier","Email"]
+    null_columns: ["Identifier", "Email"]
   uniqueness_check:
-    unique_columns: ["Identifier","Email"]
+    unique_columns: ["Identifier", "Email"]
   data_compare_check:
     key_column: ["Identifier"]
     num_records: 100
@@ -38,3 +38,70 @@ data_quality_checks:
     max_val: 515685
   date_check:
     column: birthmonth
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#this is correct as well details the commented part but it is not platform independent# It runs fine in our local system but in the
+#github actions it fails due to C drive path as we do not have C drive path in git.
+#source:
+#  path: "C:\\Users\\souls\\PycharmProjects\\MyProj\\taf_dec\\input_files\\Contact_info.csv"
+#  type: "csv"
+#  schema: "Y"
+#  options:
+#    header: True
+#    delimiter: ","
+#  exclude_cols: ["created_date","updated_date","hash_key","batch_id"]
+#
+#target:
+#  path: "C:\\Users\\souls\\PycharmProjects\\MyProj\\taf_dec\\input_files\\Contact_info.csv"
+#  type: "csv"
+#  schema: "Y"
+#  options:
+#    header: True
+#    delimiter: ","
+#  exclude_cols: ["created_date","updated_date","hash_key","batch_id"]
+#
+#validations:
+#  count_check:
+#    key_columns: ["Identifier"]
+#  duplicate_check:
+#    key_columns: ["Identifier"]
+#  null_check:
+#    null_columns: ["Identifier","Email"]
+#  uniqueness_check:
+#    unique_columns: ["Identifier","Email"]
+#  data_compare_check:
+#    key_column: ["Identifier"]
+#    num_records: 100
+#
+#data_quality_checks:
+#  name_check:
+#    column: "given_name"
+#  check_range:
+#    column: zipcode_prev
+#    min_val: 515670
+#    max_val: 515685
+#  date_check:
+#    column: birthmonth
