--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: etlbigdataautomation
 
 on:
@@ -14,19 +11,43 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
+    # Set up Python 3.10
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    
+    # Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Automation execution
-      run: python runner.py
+
+    # Download required JARs for Spark
+    - name: Download Spark JARs
+      run: |
+        mkdir -p $HOME/spark-jars
+        curl -L -o $HOME/spark-jars/snowflake-jdbc-3.22.0.jar https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/3.22.0/snowflake-jdbc-3.22.0.jar
+        curl -L -o $HOME/spark-jars/postgresql-42.2.5.jar https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar
+        curl -L -o $HOME/spark-jars/azure-storage-8.6.6.jar https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/8.6.6/azure-storage-8.6.6.jar
+        curl -L -o $HOME/spark-jars/hadoop-azure-3.3.1.jar https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/3.3.1/hadoop-azure-3.3.1.jar
+        curl -L -o $HOME/spark-jars/mssql-jdbc-12.2.0.jre8.jar https://repo1.maven.org/maven2/com/microsoft/sqlserver/mssql-jdbc/12.2.0.jre8/mssql-jdbc-12.2.0.jre8.jar
+
+    # Run tests with the Spark JARs included in the spark.jars configuration
+    - name: Automation execution with Spark JARs
+      run: |
+        python runner.py
+      env:
+        SPARK_HOME: /path/to/spark
+        PYSPARK_SUBMIT_ARGS: --jars \
+          $HOME/spark-jars/snowflake-jdbc-3.22.0.jar,\
+          $HOME/spark-jars/postgresql-42.2.5.jar,\
+          $HOME/spark-jars/azure-storage-8.6.6.jar,\
+          $HOME/spark-jars/hadoop-azure-3.3.1.jar,\
+          $HOME/spark-jars/mssql-jdbc-12.2.0.jre8.jar pyspark-shell
