--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -21,7 +21,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    
+
+    # Install Spark
+    - name: Install Apache Spark
+      run: |
+        wget -qO- https://archive.apache.org/dist/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3.2.tgz | tar xvz -C /opt/
+        export SPARK_HOME=/opt/spark-3.3.0-bin-hadoop3.2
+        export PATH=$SPARK_HOME/bin:$PATH
+
     # Install dependencies
     - name: Install dependencies
       run: |
@@ -29,7 +36,7 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # Download required JARs for Spark
+    # Download Spark JARs
     - name: Download Spark JARs
       run: |
         mkdir -p $HOME/spark-jars
@@ -44,7 +51,8 @@ jobs:
       run: |
         python runner.py
       env:
-        SPARK_HOME: /path/to/spark
+        SPARK_HOME: /opt/spark-3.3.0-bin-hadoop3.2
+        PATH: $SPARK_HOME/bin:$PATH
         PYSPARK_SUBMIT_ARGS: --jars \
           $HOME/spark-jars/snowflake-jdbc-3.22.0.jar,\
           $HOME/spark-jars/postgresql-42.2.5.jar,\
