--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -1,4 +1,4 @@
-name: etlbigdataautomation
+name: ETL Big Data Automation
 
 on:
   push:
@@ -16,46 +16,59 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # Set up Python 3.10
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
 
-    # Install Spark
-    - name: Install Apache Spark
-      run: |
-        wget -qO- https://archive.apache.org/dist/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3.2.tgz | tar xvz -C /opt/
-        export SPARK_HOME=/opt/spark-3.3.0-bin-hadoop3.2
-        export PATH=$SPARK_HOME/bin:$PATH
-
-    # Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # Download Spark JARs
-    - name: Download Spark JARs
+    - name: Download and Install Apache Spark
       run: |
-        mkdir -p $HOME/spark-jars
-        curl -L -o $HOME/spark-jars/snowflake-jdbc-3.22.0.jar https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/3.22.0/snowflake-jdbc-3.22.0.jar
-        curl -L -o $HOME/spark-jars/postgresql-42.2.5.jar https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar
-        curl -L -o $HOME/spark-jars/azure-storage-8.6.6.jar https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/8.6.6/azure-storage-8.6.6.jar
-        curl -L -o $HOME/spark-jars/hadoop-azure-3.3.1.jar https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/3.3.1/hadoop-azure-3.3.1.jar
-        curl -L -o $HOME/spark-jars/mssql-jdbc-12.2.0.jre8.jar https://repo1.maven.org/maven2/com/microsoft/sqlserver/mssql-jdbc/12.2.0.jre8/mssql-jdbc-12.2.0.jre8.jar
+        # Set variables for Spark version and Hadoop version
+        SPARK_VERSION=3.3.0
+        HADOOP_VERSION=hadoop3.2
+        DOWNLOAD_URL=https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz
+        TARGET_DIR=/opt/spark
 
-    # Run tests with the Spark JARs included in the spark.jars configuration
-    - name: Automation execution with Spark JARs
+        # Download Apache Spark
+        wget ${DOWNLOAD_URL} -O /tmp/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz
+
+        # Verify if the download was successful
+        if [ $? -ne 0 ]; then
+          echo "Download failed! Please check the URL."
+          exit 1
+        fi
+
+        # Extract Spark to the target directory
+        tar -xvzf /tmp/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz -C /opt/
+
+        # Set environment variables for Spark
+        echo "export SPARK_HOME=/opt/spark/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}" >> $GITHUB_ENV
+        echo "export PATH=$SPARK_HOME/bin:$PATH" >> $GITHUB_ENV
+
+    - name: Download necessary JARs
+      run: |
+        # Create a directory to store JARs
+        mkdir -p $SPARK_HOME/jars
+
+        # Download all necessary JARs
+        wget https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/3.22.0/snowflake-jdbc-3.22.0.jar -P $SPARK_HOME/jars/
+        wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar -P $SPARK_HOME/jars/
+        wget https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/8.6.6/azure-storage-8.6.6.jar -P $SPARK_HOME/jars/
+        wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/3.3.1/hadoop-azure-3.3.1.jar -P $SPARK_HOME/jars/
+        wget https://repo1.maven.org/maven2/com/microsoft/sqlserver/mssql-jdbc/12.2.0.jre8/mssql-jdbc-12.2.0.jre8.jar -P $SPARK_HOME/jars/
+
+    - name: Set Spark configurations for JARs
+      run: |
+        # Configure Spark to use the downloaded JARs
+        echo "export SPARK_CONF_DIR=$SPARK_HOME/conf" >> $GITHUB_ENV
+        echo "spark.jars=$(find $SPARK_HOME/jars -type f | tr '\n' ',')" >> $GITHUB_ENV
+
+    - name: Automation execution
       run: |
         python runner.py
-      env:
-        SPARK_HOME: /opt/spark-3.3.0-bin-hadoop3.2
-        PATH: $SPARK_HOME/bin:$PATH
-        PYSPARK_SUBMIT_ARGS: --jars \
-          $HOME/spark-jars/snowflake-jdbc-3.22.0.jar,\
-          $HOME/spark-jars/postgresql-42.2.5.jar,\
-          $HOME/spark-jars/azure-storage-8.6.6.jar,\
-          $HOME/spark-jars/hadoop-azure-3.3.1.jar,\
-          $HOME/spark-jars/mssql-jdbc-12.2.0.jre8.jar pyspark-shell
