--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Download necessary JARs
       run: |
-        # Create a directory to store JARs
+        # Create a directory to store JARs within the SPARK_HOME directory
         mkdir -p $SPARK_HOME/jars
 
         # Download all necessary JARs
