--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -53,21 +53,21 @@ jobs:
 
     - name: Download necessary JARs
       run: |
-        # Create a directory to store JARs within the SPARK_HOME directory
-        mkdir -p $SPARK_HOME/jars
+        # Create a directory to store JARs in the /tmp directory (or any directory with write permissions)
+        mkdir -p /tmp/spark_jars
 
         # Download all necessary JARs
-        wget https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/3.22.0/snowflake-jdbc-3.22.0.jar -P $SPARK_HOME/jars/
-        wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar -P $SPARK_HOME/jars/
-        wget https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/8.6.6/azure-storage-8.6.6.jar -P $SPARK_HOME/jars/
-        wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/3.3.1/hadoop-azure-3.3.1.jar -P $SPARK_HOME/jars/
-        wget https://repo1.maven.org/maven2/com/microsoft/sqlserver/mssql-jdbc/12.2.0.jre8/mssql-jdbc-12.2.0.jre8.jar -P $SPARK_HOME/jars/
+        wget https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/3.22.0/snowflake-jdbc-3.22.0.jar -P /tmp/spark_jars/
+        wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar -P /tmp/spark_jars/
+        wget https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/8.6.6/azure-storage-8.6.6.jar -P /tmp/spark_jars/
+        wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/3.3.1/hadoop-azure-3.3.1.jar -P /tmp/spark_jars/
+        wget https://repo1.maven.org/maven2/com/microsoft/sqlserver/mssql-jdbc/12.2.0.jre8/mssql-jdbc-12.2.0.jre8.jar -P /tmp/spark_jars/
 
     - name: Set Spark configurations for JARs
       run: |
         # Configure Spark to use the downloaded JARs
         echo "export SPARK_CONF_DIR=$SPARK_HOME/conf" >> $GITHUB_ENV
-        echo "spark.jars=$(find $SPARK_HOME/jars -type f | tr '\n' ',')" >> $GITHUB_ENV
+        echo "spark.jars=$(find /tmp/spark_jars -type f | tr '\n' ',')" >> $GITHUB_ENV
 
     - name: Automation execution
       run: |
