--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -1,21 +1,21 @@
-name: ETL Big Data Automation
+name: etlbigdataautomation
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
 
 permissions:
   contents: read
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
@@ -28,13 +28,13 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Install Apache Spark
+    - name: Set Spark version and download Apache Spark
       run: |
         # Set variables for Spark version and Hadoop version
         SPARK_VERSION=3.4.2
         HADOOP_VERSION=hadoop3
         DOWNLOAD_URL=https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz
-        TARGET_DIR=/opt/spark
+        TARGET_DIR=$HOME/spark
         
         # Download Apache Spark
         wget ${DOWNLOAD_URL} -O /tmp/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz
@@ -46,14 +46,18 @@ jobs:
         fi
         
         # Extract Spark to the target directory
-        tar -xvzf /tmp/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz -C /opt/
+        mkdir -p $TARGET_DIR
+        tar -xvzf /tmp/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}.tgz -C $TARGET_DIR
         
         # Set environment variables for Spark
-        echo "export SPARK_HOME=/opt/spark/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}" >> $GITHUB_ENV
+        echo "export SPARK_HOME=$TARGET_DIR/spark-${SPARK_VERSION}-bin-${HADOOP_VERSION}" >> $GITHUB_ENV
         echo "export PATH=$SPARK_HOME/bin:$PATH" >> $GITHUB_ENV
 
     - name: Set JARs for Spark
       run: |
+        # Ensure SPARK_HOME environment variable is set correctly
+        echo "SPARK_HOME is $SPARK_HOME"
+        
         # Create a directory to store JARs within the SPARK_HOME directory
         mkdir -p $SPARK_HOME/jars
 
@@ -64,6 +68,5 @@ jobs:
         cp /path/to/jars/hadoop-azure-3.3.1.jar $SPARK_HOME/jars/
         cp /path/to/jars/mssql-jdbc-12.2.0.jre8.jar $SPARK_HOME/jars/
 
-    - name: Run automation execution
-      run: |
-        python runner.py
+    - name: Automation execution
+      run: python runner.py
