--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -1,5 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 name: ETL Automation
 
 on:
@@ -27,5 +25,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install pyspark azure-storage-blob pyodbc
     - name:   Test with pytest
       run: python runner.py
