--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -1,44 +1,52 @@
-name: ETL Automation
+name: Run PySpark ETL Transformation
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches: [ main ]
 
 jobs:
-  build:
+  run-transformation:
     runs-on: ubuntu-latest
 
+    env:
+      ENV: qa
+      PROJECT_ROOT: ${{ github.workspace }}
+      POSTGRES_JAR: ${{ github.workspace }}/jars/postgresql-42.2.5.jar
+      CUSTOMERS_CSV: ${{ github.workspace }}/input_files/customers.csv
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
+      - name: Set up Java (Required for Spark)
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pyspark azure-storage-blob pyodbc
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Create jars directory
-      run: mkdir -p ./taf_dec/jars # corrected path
+      - name: Install Python Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Download JARs
-      run: |
-        wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/3.3.1/hadoop-azure-3.3.1.jar -P ./taf_dec/jars
-        wget https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/8.6.6/azure-storage-8.6.6.jar -P ./taf_dec/jars
-        wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure-datalake/3.3.1/hadoop-azure-datalake-3.3.1.jar -P ./taf_dec/jars
-        wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.5/postgresql-42.2.5.jar -P ./taf_dec/jars
-        wget https://repo1.maven.org/maven2/com/microsoft/sqlserver/mssql-jdbc/12.2.0.jre8/mssql-jdbc-12.2.0.jre8.jar -P ./taf_dec/jars
-        wget https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/3.22.0/snowflake-jdbc-3.22.0.jar -P ./taf_dec/jars
+      - name: Download Apache Spark
+        run: |
+          curl -O https://downloads.apache.org/spark/spark-3.4.1/spark-3.4.1-bin-hadoop3.tgz
+          tar xzf spark-3.4.1-bin-hadoop3.tgz
+          echo "SPARK_HOME=$PWD/spark-3.4.1-bin-hadoop3" >> $GITHUB_ENV
+          echo "$PWD/spark-3.4.1-bin-hadoop3/bin" >> $GITHUB_PATH
 
-    - name: Test with pytest
-      run: python -m pytest .
+      - name: Verify Spark Installation
+        run: |
+          spark-submit --version
+
+      - name: Run PySpark Transformation
+        run: |
+          spark-submit taf_dec/test_cases/transformation.py
