--- a/.github/workflows/etl_bigdata_automation.yml
+++ b/.github/workflows/etl_bigdata_automation.yml
@@ -1,53 +1,21 @@
-name: Run PySpark ETL Transformation
+name: Run Transformation Script
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches:
+      - main  # or whichever branch you want to run the script on
 
 jobs:
-  run-transformation:
-    runs-on: ubuntu-latest
-
-    env:
-      ENV: qa
-      PROJECT_ROOT: ${{ github.workspace }}
-      POSTGRES_JAR: ${{ github.workspace }}/jars/postgresql-42.2.5.jar
-      CUSTOMERS_CSV: ${{ github.workspace }}/input_files/customers.csv
+  build:
+    runs-on: ubuntu-latest  # or use your preferred OS, like windows-latest if required
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    # Step 1: Check out the repository
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Java (Required for Spark)
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install Python Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Download Apache Spark
-        run: |
-          curl -O https://downloads.apache.org/spark/spark-3.4.4/spark-3.4.4-bin-hadoop3.tgz
-          tar xzf spark-3.4.4-bin-hadoop3.tgz
-          echo "SPARK_HOME=$PWD/spark-3.4.4-bin-hadoop3" >> $GITHUB_ENV
-          echo "$PWD/spark-3.4.4-bin-hadoop3/bin" >> $GITHUB_PATH
-
-      - name: Verify Spark Installation
-        run: |
-          spark-submit --version
-
-      - name: Run PySpark Transformation
-        run: |
-          spark-submit taf_dec/test_cases/transformation.py
+    # Step 2: Set the working directory to the folder containing your transformation.py
+    - name: Run transformation script
+      run: |
+        cd taf_dec/tests/table4  # Adjust this to match where your transformation.py file is located in the repo
+        python3 transformation.py
