--- a/.github/workflows/test2file_automation.yml
+++ b/.github/workflows/test2file_automation.yml
@@ -1,5 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 name: ETL Automation
 
 on:
@@ -28,4 +26,16 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name:   Test with pytest
-      run: python runner2.py
+      run: |
+        #  Change this to the correct relative path.
+        if [ -d taf_dec ]; then
+          echo "Directory taf_dec exists!"
+          python runner2.py 
+        elif [ -d  "taf_dec" ]; then
+          echo "Directory taf_dec exists!"
+          python runner2.py
+        else
+          echo "Directory taf_dec does NOT exist!"
+          exit 1
+        fi
+      shell: /usr/bin/bash -e
